<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2">

        <su.whs.call.views.RoundedImageView
            android:id="@+id/executorAvatar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/fragmentsTopMartin"
            android:src="@drawable/avatar_icon" />

        <su.whs.call.views.RateStarsView
            android:id="@+id/rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/executorAvatar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/reviewsBtn"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_below="@+id/categoryName"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/button_shape"
            android:layout_marginTop="15dp"
            android:width="170dp"
            android:text="@string/reviews_cap_with_count" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/linearLayout2"
        android:layout_toRightOf="@+id/linearLayout2"
        android:layout_toEndOf="@+id/linearLayout2"
        android:id="@+id/relativeLayout" >

        <Button
            android:id="@+id/currentStateSwitcher"
            style="@style/leftFilterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:minWidth="125dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/current_state_free"
            android:textAllCaps="true"
            android:layout_below="@+id/numberOfCallsBtn"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/numberOfCallsBtn"
            style="@style/rightFilterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:minWidth="125dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/number_of_calls"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/descriptionBtn"
            style="@style/rightFilterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:minWidth="125dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/number_of_calls"
            android:textAllCaps="true"
            android:layout_below="@+id/currentStateSwitcher"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/daysBtn"
            style="@style/rightFilterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:minWidth="125dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/number_of_calls"
            android:textAllCaps="true"
            android:layout_below="@+id/descriptionBtn"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/categoryNameTv"
        android:layout_above="@+id/relativeLayout"
        android:layout_toRightOf="@+id/linearLayout2"
        android:layout_toEndOf="@+id/linearLayout2" />


</RelativeLayout>