<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/frameBackground">

    <ScrollView
        android:id="@+id/executorArea"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/fragmentsBottomMargin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <ImageView
                    android:id="@+id/blurredExecutorAvatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />

                <!-- <su.whs.call.views.RoundedImageView
                    android:id="@+id/executorAvatar"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/fragmentsTopMartin"
                    android:src="@drawable/avatar_icon" /> -->

                <com.joooonho.SelectableRoundedImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/executorAvatar"

                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/fragmentsTopMartin"
                    android:src="@drawable/avatar_icon"

                    android:scaleType="centerCrop"
                    app:sriv_left_top_corner_radius="16dip"
                    app:sriv_right_top_corner_radius="0dip"
                    app:sriv_left_bottom_corner_radius="48dip"
                    app:sriv_right_bottom_corner_radius="16dip"
                    app:sriv_border_width="2dip"
                    app:sriv_border_color="@color/orange"
                    app:sriv_oval="true" />



                <ImageView
                    android:id="@+id/busyMark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/executorAvatar"
                    android:layout_alignTop="@+id/executorAvatar"
                    android:src="@drawable/ic_circle_red_small"
                    android:visibility="gone" />

                <su.whs.call.views.RateStarsView
                    android:id="@+id/executorRateView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/executorAvatar"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <Button
                    android:id="@+id/currentStateSwitcher"
                    style="@style/leftFilterButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:minWidth="125dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:text="@string/current_state_free"
                    android:textAllCaps="true" />

                <Button
                    android:id="@+id/numberOfCallsBtn"
                    style="@style/rightFilterButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:minWidth="125dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:text="@string/number_of_calls"
                    android:textAllCaps="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="vertical">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:id="@+id/profileDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/empty"
                        android:textColor="@color/black"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </ScrollView>

            </LinearLayout>

            <Button
                android:id="@+id/executorCategoriesBtn"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="100dp"
                android:minWidth="125dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@drawable/button_shape"
                android:text="@string/my_categories"
                android:textAllCaps="true" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/clientArea"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/fragmentsBottomMargin"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp">

            <ImageView
                android:id="@+id/blurredClientAvatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

            <!--<su.whs.call.views.RoundedImageView
                android:id="@+id/clientAvatar"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/fragmentsTopMartin"
                android:src="@drawable/avatar_icon" /> -->


            <com.joooonho.SelectableRoundedImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/clientAvatar"

                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/fragmentsTopMartin"
                android:src="@drawable/avatar_icon"

                android:scaleType="centerCrop"
                app:sriv_left_top_corner_radius="16dip"
                app:sriv_right_top_corner_radius="0dip"
                app:sriv_left_bottom_corner_radius="48dip"
                app:sriv_right_bottom_corner_radius="16dip"
                app:sriv_border_width="2dip"
                app:sriv_border_color="@color/orange"
                app:sriv_oval="true" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/clientAvatar"
                android:layout_centerHorizontal="true"
                android:paddingTop="10dp"
                android:text="@string/recent_calls"
                android:textColor="?attr/textColorPrimary"
                android:textSize="16sp" />

        </RelativeLayout>

        <ListView
            android:id="@+id/recentCallsList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollingCache="false"
            android:cacheColorHint="@android:color/transparent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:divider="@drawable/list_divider" />

    </LinearLayout>


</RelativeLayout>
