<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/frameBackground">

    <LinearLayout
        android:id="@+id/areaReviewsList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/fragmentsBottomMargin"
        android:paddingTop="@dimen/fragmentsTopMartin"
        android:visibility="visible">

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:divider="?attr/listDivider" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/areaReviewWriting"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/fragmentsBottomMargin"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="@dimen/fragmentsTopMartin"
        android:visibility="gone">

        <RatingBar
            android:id="@+id/ratingBar"
            style="@style/starsRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/stars_for_rating"
            android:textAppearance="@android:style/TextAppearance"
            android:textColor="?attr/textColorPrimary" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="10dp"
            android:background="@drawable/list_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="От:"
                android:textColor="?attr/textColorPrimary"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/textFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="Петросян"
                android:textColor="?attr/textColorPrimary"
                android:textSize="24dp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@drawable/list_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="О ком:"
                android:textColor="?attr/textColorPrimary"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/textUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="Петросян"
                android:textColor="?attr/textColorPrimary"
                android:textSize="24dp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@drawable/list_divider" />

        <EditText
            android:id="@+id/editReview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="top"
            android:hint="@string/your_review"
            android:imeOptions="actionDone"
            android:textColor="?attr/textColorPrimary"
            android:textCursorDrawable="@null"
            android:textSize="24dp" />

        <Button
            android:id="@+id/sendReviewBtn"
            style="@style/filterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:minWidth="125dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/send_review"
            android:textAllCaps="true"
            android:visibility="gone" />

    </LinearLayout>

</RelativeLayout>
